  * Add ‘.hgsigs’ to the default dpkg-source ignore lists.
    Based on a patch by Jakub Wilk <jwilk@debian.org>. Closes: #627462
  * Do not allow blank lines in field values. Closes: #308082
  * Do not warn on missing architecture on packages in config-files state,
    but then make sure the architecture field is usable. Closes: #604241

  [ Updated dpkg translations ]
  * German (Sven Joachim). Closes: #620312

  [ Updated man page translations ]
  * German (Helge Kreutzmann).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

 -- Raphaël Hertzog <hertzog@debian.org>  Sat, 02 Apr 2011 09:21:26 +0200

dpkg (1.16.0.3) unstable; urgency=medium

  * Allow again Priority field values not known to dpkg. Regression
    introduced in 1.16.0.

 -- Guillem Jover <guillem@debian.org>  Wed, 04 May 2011 10:01:30 +0200

dpkg (1.16.0.2) unstable; urgency=high

  * Fix dpkg-split --auto to not fail when opening the new depot file.
  * Fix dpkg-split to correctly set the last part split size.
  * Fix build failure on DEB_BUILD_OPTIONS=noopt due to a missing <locale.h>
    include in gettext.h needed by the gettext context functions.

 -- Guillem Jover <guillem@debian.org>  Sat, 16 Apr 2011 00:14:15 +0200

dpkg (1.16.0.1) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Fix regression affecting dpkg -R. Closes: #620636
  * Don't fail during unpack if the system doesn't support changing timestamps
    of symlinks. Closes: #620679

 -- Guillem Jover <guillem@debian.org>  Tue, 05 Apr 2011 07:28:20 +0200

dpkg (1.16.0) unstable; urgency=low

  [ Guillem Jover ]
  * Use DPKG_MAINTSCRIPT_PACKAGE environment variable as package name on
    dpkg-divert when no --package or --local options have been specified.
  * Do not allow versions starting with non-digit when doing strict parsing,
    warn otherwise.
  * Update dpkg(1) to note that --status-fd output does not contain newlines
    in error messages anymore (this was fixed in 1.15.0).