@@ -106,6 +106,13 @@ A list of these values can be obtained from the latest version of the
 package.
 
 .TP
+.BR Build\-Features: " <features list>"
+A comma-separated list of names of build-time features that are supported
+by the source package. Currently, the only supported feature is
+\fBbuild-arch\fP. It allows dpkg-buildpackage to call the \fIbuild-arch\fP
+or \fIbuild-indep\fP targets in place of \fIbuild\fP.
+
+.TP
 .BR Build\-Depends: " <package list>"
 A list of packages that need to be installed and configured to be able to build
 the source package.
