@@ -85,6 +85,12 @@ dpkg (1.16.1) UNRELEASED; urgency=low
   * Do not warn on missing architecture on packages in config-files state,
     but then make sure the architecture field is usable. Closes: #604241
 
+  [ Bill Allombert]
+  * Add support for Build-Features: build-arch. Closes: #229357
+    With this flag, dpkg-buildpackage will now run "debian/rules build-arch"
+    or "debian/rules build-indep" instead of "debian/rules build" when
+    appropriate.
+
   [ Updated dpkg translations ]
   * German (Sven Joachim). Closes: #620312
 
